	  outputs, refs: #6583.
	* Compute progress in bmx worker, closes: #6583.
	* Remove memory_limit from Command.run arguments.
	* Let the worker specify the command kill timeout.
	* Increase kill timeout limit to 5 hours for the bmx worker.
	* Support text and timecode burning through drawtext method in
	  ffmpeg worker, refs: #6582.

Version 0.8.1 Released on 2013/01/16

	* Rename transcode_mpeg4 method to transcode_mp4 in ffmpeg worker,
	  closes: #6552.

Version 0.8.0 Released on 2012/12/17

	* Support DV codec in ffmpeg worker.
	* Add pix_fmt option to simple H264 transcoding profile.
	* Add resolution option to simple H264 transcoding profile.
	* Add resolution option to transcode action.
	* Simplify simple H264 transcoding profile.
	* Use 16/9 as default display aspect ratio for HD files in trancode
	  action.
	* Fix display aspect ratio override in transcode action.
	* Add toolbox2-transcode tool.
	* Trigger action _callback after worker execution.
	* Switch thumbnail generation to scene detect filter.
	* Add width option to make_thumbnail method in ffmpeg worker.
	* Add thumbnail_width option to avinfo_extract action.
	* Remove deprecated videoparser_extract action.

Version 0.7.0 Released on 2012/11/23

	* Add audio_format property to AVInfo class.
	* Try to keep input audio format in transcode action.
	* Rename and use sample_rate option in transcode action.
	* Add audio bitrate option to transcode action.
	* Add gop_size option to MPEG2/XDCAMHD transcoding profiles.
	* Add gop_size option to transcode action.
	* Support more DNxHD transcoding profiles in ffmpeg worker.
	* Add interlaced option to transcode action.
	* Add closed_gop option to MPEG2/XDCAMHD transcoding profiles.
	* Add closed_gop option to transcode action.
	* Support demuxing of DNxHD essences in ffmpeg worker.
	* Read fps value from ffmpeg output.
	* Support BMX muxer.
	* Handle interlaced option in XDCAMHD transcoding profile.